cabal-version:      2.4
name:               lambcalc
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             D M
maintainer:         darinm223@gmail.com

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lambcalc
                    , Lambcalc.Alpha
                    , Lambcalc.Anf
                    , Lambcalc.Closure
                    , Lambcalc.Hoist
                    , Lambcalc.Lam
                    , Lambcalc.Llvm
                    , Lambcalc.Lower
                    , Lambcalc.Shared

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wredundant-constraints
                 -Wredundant-record-wildcards
                 -Wunused-record-wildcards
                 -fshow-hole-constraints
                 -haddock
    build-depends:    base ^>=4.15.0.0
                    , optics
                    , transformers
                    , unordered-containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable lambcalc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        lambcalc

    hs-source-dirs:   src-exe
    default-language: Haskell2010

test-suite lambcalc-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.15.0.0
